# Big-integer-arithmetic

./: README.md
Big_integer_arithmetic/: CMakeLists.txt
Big_integer_arithmetic/include/: main.h
Big_integer_arithmetic/output/: Answer.txt  answer_test.txt  answer_test_1.txt  answer_test_2.txt  answer_text_1.txt  value.txt
Big_integer_arithmetic/src/: list.c  main.c  ntt.c  num.c
Big_integer_arithmetic/test/: Num_1.txt
